# esp-idf-component-SDL_bsp

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: upload-sdl-bsp-component.yml
include/: esp_bsp_sdl.h
src/: esp_bsp_sdl_common.c
src/boards/: esp_bsp_sdl_esp32_p4_function_ev.c  esp_bsp_sdl_esp32_s3_lcd_ev_board.c  esp_bsp_sdl_esp_box_3.c  esp_bsp_sdl_esp_bsp_devkit.c  esp_bsp_sdl_esp_bsp_generic.c  esp_bsp_sdl_m5_atom_s3.c  esp_bsp_sdl_m5stack_core_s3.c  esp_bsp_sdl_m5stack_tab5.c
support/: format.sh
